--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -11,10 +11,11 @@ html {
   body {
     display: flex;
     flex-direction: column;
+    font-family: 'Roboto','Arial', sans-serif;
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: aqua;
+    overflow-x: hidden;
   }
   
   main {
