--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -1,4 +1,8 @@
 @import "visually-hidden";
 @import "container";
-@import ".header";
+@import "mixin";
+@import "header";
+@import "hero";
+@import "info";
+@import "band";
 @import "footer";
