--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -1,5 +1,3 @@
-.site-header {
-}
 
 .header__inner {
 	display: flex;
@@ -28,8 +26,18 @@
 }
 
 .navbar__item--active {
+	position: relative;
 	margin-right: 0;
 	margin-left: 10px;
+	
+	&::before{
+		content: '';
+		position: absolute;
+		top: 28px;
+		width: 153px;
+		height: 1px;
+		border: 1px solid #333;
+	}
 }
 
 .navbar__link {
