--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -61,7 +61,7 @@
 		width: 290px;
 		height: 378px;
 		top: 30px;
-		background-image: url('../../images/intro-bg.jpg');
+		background-image: url('../images/intro-bg.jpg');
 		left: calc(50% - 101px);
 		background-size: cover;
 	}
