--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -1,5 +1,5 @@
 .site-footer {
-	background-image: url('../../images/footer-bgi.jpg');
+	background-image: url('../images/footer-bgi.jpg');
 	background-repeat: no-repeat;
 	background-size: 100% 830px;
 	padding: 240px 0;
