--- a/sass/blocks/_band.scss
+++ b/sass/blocks/_band.scss
@@ -11,9 +11,44 @@
     max-width: 490px;
 }
 
+.band__title
+{
+    font-weight: 700;
+	font-size: 50px;
+	line-height: 120%;
+	color: #000;
+	margin: 0;
+	margin-bottom: 30px;
+}
+
+.band__text{
+    font-size: 16px;
+	line-height: 150%;
+	color: #777;
+	margin: 0;
+	margin-bottom: 30px;
+	padding-left: 40px;
+	border-left: 3px solid #888;
+}
+
 .band__img{
     width: 381px;
     height: 572px;
+}
+
+.band__btn
+{
+    width: 100%;
+	max-width: 260px;
+	padding: 12px 20px;
+	background-color: #ea625c;
+	border: none;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 150%;
+	text-align: center;
+	text-transform: uppercase;
+	color: #ffffff;
 }
 
 
@@ -29,5 +64,23 @@
         border-radius: 20px;   
         
         margin-bottom: 41px;
+    }
+
+    .band__title
+    {
+        font-size: 46px;
+    }
+
+    .band__text{
+        font-size: 14px;
+    }
+
+    .band__btn
+    {
+        max-width:190px ;
+        max-width: 190px;
+        padding: 9.5px ;
+        font-size: 14px;
+        line-height: 21px;
     }
 }
